# rust-poc

./: .gitignore  Cargo.toml  README.md
migrations/: 20250221025655_create_posts_table.sql
src/: main.rs
tests/: e2e_tests.rs
