[package]
name = "microblog"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
